BB-4667: Horizontal scroll on Order History page  - fixed horizontal scroll

--- a/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/_legacy/current-grid/current-grid.scss
+++ b/src/Oro/Bundle/FrontendBundle/Resources/public/default/scss/_legacy/current-grid/current-grid.scss
@@ -379,39 +379,6 @@
       &:before, &:after {
         display: none;
       }
-
-      @media (min-width: 1382px) {
-        &:nth-of-type(4) {
-          .filter-criteria {
-            &.dropdown-menu {
-              left: auto;
-              right: 0;
-            }
-          }
-        }
-      }
-
-      @media (min-width: 1148px) and (max-width: 1381px) {
-        &:nth-of-type(3n+3) {
-          .filter-criteria {
-            &.dropdown-menu {
-              left: auto;
-              right: 0;
-            }
-          }
-        }
-      }
-
-      @media (min-width: 992px) and (max-width: 1147px) {
-        &:nth-of-type(2n+2) {
-          .filter-criteria {
-            &.dropdown-menu {
-              left: auto;
-              right: 0;
-            }
-          }
-        }
-      }
     }
   }
 
@@ -432,7 +399,7 @@
   .oro-drop {
     position: relative;
 
-    flex-basis: 224px;
+    flex-basis: 225px;
     margin: 0 10px 5px 0;
 
     > .btn {
